--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         smoothThreshold="5"
       >
         <a-entity
-          obj-model="obj: url(mustang.obj)"
+          gltf-model="./Megalodon.glb"
           scale="5 5 5"
           position="50 150 0"
         >
