--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   
       <a-nft
         type="nft"
-        url="goodjob/goodjob"
+        url='./goodjob/goodjob'
         smooth="true"
         smoothCount="10"
         smoothTolerance=".01"
