--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     
       <a-nft
         type="nft"
-        url='./goodjob/goodjob'
+        url='https://odinn555.github.io/ArExample/goodjob/goodjob'
         smooth="true"
         smoothCount="10"
         smoothTolerance=".01"
