--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
           gltf-model="./Megalodon.glb"
           scale="250 250 250"
           position="0 0 0"
+          rotation="90 0 0"
         >
         </a-entity>
       </a-nft>
