--- a/index.html
+++ b/index.html
@@ -45,10 +45,11 @@
         smoothThreshold="5"
       >
         <a-entity
-          gltf-model="./Megalodon.glb"
+          gltf-model="./UFO.glb"
           scale="150 150 150"
           position="0 0 0"
           rotation="-90 0 0"
+          animation-mixer
         >
         </a-entity>
       </a-nft>
