--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
         >
         </a-entity>
       </a-nft>
+      <a-entity environment="preset: forest; lighting: threepoint;"></a-entity>
       <a-entity camera></a-entity>
-      <a-light type="ambient" intensity="0.5"></a-light>
-<a-light type="directional" position="0 0 0" intensity="1"></a-light>
+      
     </a-scene>
   </body>
 </html>
