--- a/index.html
+++ b/index.html
@@ -43,12 +43,14 @@
         smoothCount="10"
         smoothTolerance=".01"
         smoothThreshold="5"
+        
       >
         <a-entity
           gltf-model="./UFO.glb"
           scale="10 10 10"
           position="0 0 0"
           rotation="-90 0 0"
+          material="color: white; roughness: 0.5; metalness: 0.1"
           animation-mixer
         >
         </a-entity>
