--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         >
         </a-entity>
       </a-nft>
-      <a-entity environment="preset: forest; lighting: threepoint;"></a-entity>
+<a-light type="point" intensity="10.0" position="0 0 0"></a-light>
       <a-entity camera></a-entity>
       
     </a-scene>
