--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
           scale="10 10 10"
           position="0 0 0"
           rotation="-90 0 0"
-          material="color: white; roughness: 0.5; metalness: 0.1"
-          animation-mixer
+          animation-mixer="loop: repeat;"
         >
         </a-entity>
 <a-light type="point" intensity="10.0" position="0 0 0"></a-light>
