--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           scale="10 10 10"
           position="0 0 0"
           rotation="-90 0 0"
-          animation-mixer="loop: repeat;"
+          animation-mixer
         >
         </a-entity>
 <a-light type="point" intensity="10.0" position="0 0 0"></a-light>
