--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html style="height: 100%;">
   <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@1c2407b26c61958baa93967b5412487cd94b290b/dist/aframe-master.min.js"></script>
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
+  <script src="https://rawgit.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
   
   <style>
     .arjs-loader {
@@ -50,7 +51,7 @@
           scale="10 10 10"
           position="0 0 0"
           rotation="-90 0 0"
-          animation-mixer
+          animation-mixer="loop: repeat"
         >
         </a-entity>
 <a-light type="point" intensity="10.0" position="0 0 0"></a-light>
