--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
 <a-light type="point" intensity="10.0" position="0 0 0"></a-light>
       </a-nft>
 
-      <a-entity camera></a-entity>
+      <a-entity camera>
+         <a-cursor></a-cursor>
+      </a-entity>
       
     </a-scene>
     <script>
