--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
           animationMixer.animationMixer.data.timeScale = 1;  // Play animation at normal speed // Restart animation
         }else console.log("animation mixer is null")
       });
+
+      document.querySelector('#model').addEventListener('mouseenter', function () {
+  console.log('Mouse entered model');
+});
     </script>
   </body>
 </html>
