--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       renderer="logarithmicDepthBuffer: true;"
       embedded
       arjs="trackingMethod: best; sourceType: webcam;debugUIEnabled: true;"
+      cursor="rayOrigin: mouse">
     >
     
       <a-nft
