--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
   
   <body style="margin : 0px; overflow: hidden;">
     <!-- minimal loader shown until image descriptors are loaded -->
+    <button onClick="handlePlayClick" >Play</button>
+    <button onClick="handlePauseClick" style="margin-left: 50">Pause/</button>
     <div class="arjs-loader">
       <div>Loading, please wait...</div>
     </div>
@@ -82,7 +84,6 @@
       //   }else console.log("animation mixer is null")
       // });
     </script>
-    <button onClick="handlePlayClick" >Play</button>
-    <button onClick="handlePauseClick" >Pause/</button>
+    
   </body>
 </html>
