--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <body style="margin : 0px; overflow: hidden;">
     <!-- minimal loader shown until image descriptors are loaded -->
     <button onClick="handlePlayClick" >Play</button>
-    <button onClick="handlePauseClick" style="margin-left: 50">Pause/</button>
+    <button onClick="handlePauseClick" style="margin-left: 50px">Pause/</button>
     <div class="arjs-loader">
       <div>Loading, please wait...</div>
     </div>
