--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
   
   <body style="margin : 0px; overflow: hidden;">
     <!-- minimal loader shown until image descriptors are loaded -->
-    <button onClick="handlePlayClick" >Play</button>
-    <button onClick="handlePauseClick" style="margin-left: 50px">Pause/</button>
+    <button onClick="handlePlayClick" style="margin-left: 50px">Play</button>
+    <button onClick="handlePauseClick" >Pause</button>
     <div class="arjs-loader">
       <div>Loading, please wait...</div>
     </div>
