--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </a-scene>
     <script>
 
-      function handlePauseClick(){
+      function handlePlayClick(){
         document.getElementById("model").setAttribute('animation-mixer','timeScale: 1.0;');
       }
 
