--- a/index.html
+++ b/index.html
@@ -81,10 +81,12 @@
     <script>
 
       function handlePlayClick(){
+        console.log("play clicked")
         document.getElementById("model").setAttribute('animation-mixer','timeScale: 1.0;');
       }
 
        function handlePauseClick(){
+                 console.log("pause clicked")
         document.getElementById("model").setAttribute('animation-mixer','timeScale: 0;');
       }
       // Add click listener to trigger animation
