--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
   <body style="margin : 0px; overflow: hidden;">
     <!-- minimal loader shown until image descriptors are loaded -->
     <div class="buttons">    
-    <button onClick="handlePlayClick" >Play</button>
-    <button onClick="handlePauseClick" >Pause</button>
+    <button onClick="handlePlayClick()" >Play</button>
+    <button onClick="handlePauseClick()" >Pause</button>
       </div>
     <div class="arjs-loader">
       <div>Loading, please wait...</div>
