--- a/index.html
+++ b/index.html
@@ -99,13 +99,15 @@
 
       // Listen for the nft-detected event
       document.querySelector('#nft').addEventListener('nft-detected', function () {
+        console.log("nft detcted event")
         // Show the button when the NFT is detected
-        buttons.style.display = 'block';
+        buttons.style.display = 'flex';
         console.log('NFT detected! Button is visible.');
       });
 
       // Listen for the nft-lost event
       document.querySelector('#nft').addEventListener('nft-lost', function () {
+        console.log("nft lost event")
         // Hide the button when the NFT is lost
         handlePauseClick()
         buttons.style.display = 'none';
