--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         smoothCount="10"
         smoothTolerance=".01"
         smoothThreshold="5"
-        
+        markerhandler
       >
         <a-entity
           gltf-model="./UFO.glb"
