--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         markerhandler
       >
         <a-entity
-          gltf-model="./UFO.glb"
+          gltf-model="./ar_safe_gold.glb"
           scale="10 10 10"
           position="0 0 0"
           rotation="-90 0 0"
