--- a/index.html
+++ b/index.html
@@ -83,10 +83,6 @@
   
   <body style="margin : 0px; overflow: hidden;">
     <!-- minimal loader shown until image descriptors are loaded -->
-    <div id="buttonsContainer" class="buttons">    
-    <button onClick="handlePlayClick()" >Play</button>
-    <button onClick="handlePauseClick()" >Pause</button>
-      </div>
     <div class="arjs-loader">
       <div>Loading, please wait...</div>
     </div>
@@ -97,7 +93,9 @@
       arjs="trackingMethod: best; sourceType: webcam;debugUIEnabled: false;"
       >
     >
-    
+    <a-assets>
+            <a-asset-item id="glb-asset" src="./UFO.glb"></a-asset-item>
+        </a-assets>
       <a-nft
         id="nft"
         type="nft"
@@ -109,7 +107,7 @@
         markerhandler
       >
         <a-entity
-          gltf-model="https://odinn555.github.io/ArExample/ar_safe_gold.glb"
+          gltf-model="#glb-asset"
           scale="10 10 10"
           position="0 0 0"
           rotation="-90 0 0"
