--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       >
     >
     <a-assets>
-            <a-asset-item id="glb-asset" src="./UFO.glb"></a-asset-item>
+            <a-asset-item id="glb-asset" src="./UFO.glb" response-type=“arraybuffer”></a-asset-item>
         </a-assets>
       <a-nft
         id="nft"
