--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           id="model"
         >
         </a-entity>
-<a-light type="ambient" intensity="10.0" position="0 0 0"></a-light>
+<a-light type="point" intensity="10.0" position="0 100 0"></a-light>
       </a-nft>
 
       <a-entity camera>
