--- a/index.html
+++ b/index.html
@@ -113,13 +113,8 @@
           id="model"
         >
         </a-entity>
-        <a-light type="point" intensity="10.0" position="0 100 0"></a-light>
-        <a-light type="point" intensity="10.0" position="0 -100 0"></a-light>
-        <a-light type="point" intensity="10.0" position="0 0 0"></a-light>
-        <a-light type="point" intensity="10.0" position="100 0 0"></a-light>
-        <a-light type="point" intensity="10.0" position="-100 0 0"></a-light>
-        <a-light type="point" intensity="10.0" position="0 0 100"></a-light>
-        <a-light type="point" intensity="10.0" position="0 0 -100"></a-light>
+        <a-light type="ambient" intensity="10.0" position="0 100 0"></a-light>
+        
 
       </a-nft>
 
