--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         >
         </a-entity>
         <a-light type="point" intensity="10.0" position="0 100 -100"></a-light>
-        
+         <a-light type="point" intensity="10.0" position="0 0 0"></a-light>
 
       </a-nft>
 
