--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       function onSliderChange(value){
         console.log("Z slider value: "+value)
         
-        document.getElementById("model").setAttribute('position', {x: 60, y: 290, z: 10});
+        document.getElementById("model").setAttribute('position', {x: 60, y: 290, z: value});
       }
 
     // register events
