--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   <body style="margin : 0px; overflow: hidden;">
     <!-- minimal loader shown until image descriptors are loaded -->
     <div class=".buttons">
-  <input type="range" min="-100" max="100" value="0" class="slider" id="myRange" onChange="onSliderChange(this.value)">
+  <input type="range" min="-100" max="100" value="0" class="slider" id="myRange" onInput="onSliderChange(this.value)">
 </div>
     <div class="arjs-loader">
       <div>Loading, please wait...</div>
