--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
       }
 
       function onSliderChange(value){
-        console.log("Z slider value: "+value)
+        console.log("Y slider value: "+value)
         
-        document.getElementById("model").setAttribute('position', {x: 60, y: 290, z: value});
+        document.getElementById("model").setAttribute('position', {x: 60, y: value, z: -150});
       }
 
     // register events
@@ -90,7 +90,7 @@
   <body style="margin : 0px; overflow: hidden;">
     <!-- minimal loader shown until image descriptors are loaded -->
     <div class=".buttons">
-  <input type="range" min="-100" max="100" value="0" class="slider" id="myRange" onInput="onSliderChange(this.value)">
+  <input type="range" min="200" max="400" value="300" class="slider" id="myRange" onInput="onSliderChange(this.value)">
 </div>
     <div class="arjs-loader">
       <div>Loading, please wait...</div>
@@ -116,7 +116,7 @@
         <a-entity
           gltf-model="./ar_safe_gold.glb"
           scale="1500 1500 1500"
-          position="60 290 10"
+          position="60 290 -150"
           rotation="180 90 -90"
           animation-mixer="loop: once; timeScale: 0"
           id="model"
