--- a/index.html
+++ b/index.html
@@ -139,5 +139,13 @@
       </a-entity>
       
     </a-scene>
+
+    <script>
+      // Workaround for an AR.js bug (https://github.com/jeromeetienne/AR.js/issues/410)
+const sceneEl = document.querySelector('a-scene');
+sceneEl.addEventListener('loaded', () => {
+    sceneEl.camera = new THREE.PerspectiveCamera();
+});
+    </script>
   </body>
 </html>
