--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
           id="model"
         >
         </a-entity>
-        <a-light type="point" intensity="10" position="0 400 -100"></a-light>
-         <a-light type="point" intensity="10" position="0 0 100"></a-light>
+<!--         <a-light type="point" intensity="10" position="0 400 -100"></a-light> -->
+         <a-light type="point" intensity="10" position="0 0 30"></a-light>
 
       </a-nft>
 
