--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       function onSliderChange(value){
         console.log("Y slider value: "+value)
         
-        document.getElementById("light").setAttribute('position', {x: 200, y: value, z: -300});
+        document.getElementById("light").setAttribute('position', {x: 0, y: 0, z: value});
         
       }
 
