--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       function onSliderChange(value){
         console.log("Y slider value: "+value)
         
-        document.getElementById("light").setAttribute('position', {x: 0, y: 0, z: value});
+        document.getElementById("light").setAttribute('position', {x: value, y: 0, z: -200});
         
       }
 
@@ -131,7 +131,7 @@
         >
         </a-entity>
 <!--         <a-light type="point" intensity="10" position="0 400 -100"></a-light> -->
-         <a-light id="light" type="point" intensity="100" position="0 0 30"></a-light>
+         <a-light id="light" type="point" intensity="100" position="0 0 -200"></a-light>
 
       </a-nft>
 
