--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <div class=".buttons">
   <input type="range" min="-200" max="200" value="0" class="slider" id="myRange" onInput="onSliderChange(this.value)">
   <input type="range" min="-800" max="400" value="-200" class="slider" id="myRange2" onInput="onScaleSliderChange(this.value)">
-
+  <button onClick="pauseAnimation()">pause</button>
 </div>
     <div class="arjs-loader">
       <div>Loading, please wait...</div>
