--- a/index.html
+++ b/index.html
@@ -94,12 +94,13 @@
   </style>
   
   <body style="margin : 0px; overflow: hidden;">
-    <!-- minimal loader shown until image descriptors are loaded -->
-    <div class=".buttons">
+<!--     Used for debugging only -->
+<!--     <div class=".buttons">
   <input type="range" min="-200" max="200" value="0" class="slider" id="myRange" onInput="onSliderChange(this.value)">
   <input type="range" min="-800" max="400" value="-200" class="slider" id="myRange2" onInput="onScaleSliderChange(this.value)">
   <button onClick="pauseAnimation()">pause</button>
-</div>
+</div> -->
+        <!-- minimal loader shown until image descriptors are loaded -->
     <div class="arjs-loader">
       <div>Loading, please wait...</div>
     </div>
