--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           id="model"
         >
         </a-entity>
-<!--         <a-light type="point" intensity="3" position="0 0 -800"></a-light> -->
+        <a-light type="point" intensity="10" position="150 600 -500"></a-light>
          <a-light id="light" type="point" intensity="10" position="170 1000 -270"></a-light>
 
       </a-nft>
