--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
         >
         </a-entity>
         <a-light type="point" intensity="10" position="150 600 -500"></a-light>
+         <a-light  type="point" intensity="10" position="150 600 -400"></a-light>
          <a-light id="light" type="point" intensity="10" position="170 1000 -900"></a-light>
-
       </a-nft>
 
       <a-entity camera>
