--- a/index.html
+++ b/index.html
@@ -102,13 +102,13 @@
   
   <body style="margin : 0px; overflow: hidden;">
 <!--     Used for debugging only -->
-    <div class="buttons">
+<!--     <div class="buttons">
   <input type="range" min="-1000" max="1000" value="0" class="slider" id="x" onInput="onXSliderChange(this.value)">
   <input type="range" min="-1000" max="1000" value="0" class="slider" id="y" onInput="onYSliderChange(this.value)">
   <input type="range" min="-1000" max="1000" value="0" class="slider" id="z" onInput="onZSliderChange(this.value)">
 
   <button onClick="pauseAnimation()">pause</button>
-</div>
+</div> -->
         <!-- minimal loader shown until image descriptors are loaded -->
     <div class="arjs-loader">
       <div>Loading, please wait...</div>
