--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
         </a-entity>
         <a-light type="point" intensity="5" position="150 600 -500"></a-light>
          <a-light  type="point" intensity="5" position="150 600 -400"></a-light>
+        <a-entity light="type: ambient;"></a-entity>
          <a-light id="light" type="point" intensity="10" position="170 1000 -900"></a-light>
       </a-nft>
 
