--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
          <a-light id="bottomLight" type="point" intensity="5" position="150 600 -400"></a-light>
 
          <a-light id="outsideLight" type="point" intensity="10" position="170 1000 -900"></a-light> -->
-         <a-entity light="type: ambient; intensity: 10"></a-entity>        
+         <a-entity light="type: ambient;"></a-entity>        
       </a-nft>
 
       <a-entity camera>
