--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@
       </a-nft>
 
       <a-entity camera>
+        <a-light id="cameraLight" type="point" intensity="10" position="0 -10 0"></a-light> -->
       </a-entity>
       
     </a-scene>
