--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
         node.material = new THREE.MeshStandardMaterial({
            skinning: true, // the original material is using skinning
            map: node.material.map // we want the original texture
+           normalMap: node.material.normalMap
         });
         // update and clean up
         node.material.needsUpdate = true;
