--- a/index.html
+++ b/index.html
@@ -171,11 +171,12 @@
           id="model"
           model
         >
-        <a-light type="directional" position="0 0 0" rotation="-90 0 0" target="#model">
+        </a-entity>
+
+        <a-entity light="type: directional; intensity: 100" position="-1 1 0"></a-entity>
+
          
         </a-light>
-        
-        </a-entity>
 <!--         <a-light id="topLight" type="point" intensity="5" position="150 600 -500"></a-light>
          <a-light id="bottomLight" type="point" intensity="5" position="150 600 -400"></a-light>
 
