--- a/index.html
+++ b/index.html
@@ -173,10 +173,9 @@
         >
         </a-entity>
 
-        
+        <a-entity light="type: directional; intensity: 10" position="0 1 1"></a-entity>
 
          
-        </a-light>
 <!--         <a-light id="topLight" type="point" intensity="5" position="150 600 -500"></a-light>
          <a-light id="bottomLight" type="point" intensity="5" position="150 600 -400"></a-light>
 
