--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         >
         </a-entity>
 
-        <a-entity light="type: directional; intensity: 5" position="0 0 0"></a-entity>
+        <a-entity light="type: directional; intensity: 10" position="0 0 0"></a-entity>
 
          
 <!--         <a-light id="topLight" type="point" intensity="5" position="150 600 -500"></a-light>
@@ -186,7 +186,7 @@
       <a-entity camera>
 <!--         <a-light id="cameraLight" type="point" intensity="10" position="0 -10 0"></a-light> --> -->
       </a-entity>
-      <a-entity light="type: directional; intensity: 5" position="0 1 1"></a-entity>
+<!--       <a-entity light="type: directional; intensity: 5" position="0 1 1"></a-entity> -->
     </a-scene>
 
     <script>
