--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@
   <body style="margin : 0px; overflow: hidden;">
 <!--     Used for debugging only -->
     <div class="buttons">
-  <input type="range" min="-1000" max="1000" value="0" class="slider" id="x" onInput="onXSliderChange(this.value)">
-  <input type="range" min="-1000" max="1000" value="0" class="slider" id="y" onInput="onYSliderChange(this.value)">
-  <input type="range" min="-1000" max="1000" value="0" class="slider" id="z" onInput="onZSliderChange(this.value)">
+  <input type="range" min="-2000" max="2000" value="0" class="slider" id="x" onInput="onXSliderChange(this.value)">
+  <input type="range" min="-2000" max="2000" value="0" class="slider" id="y" onInput="onYSliderChange(this.value)">
+  <input type="range" min="-2000" max="2000" value="0" class="slider" id="z" onInput="onZSliderChange(this.value)">
 
   <button onClick="pauseAnimation()">pause</button>
 </div>
@@ -172,14 +172,11 @@
           model
         >
         </a-entity>
-
-        <a-entity light="type: directional; intensity: 10" position="0 0 0"></a-entity>
-
          
-<!--         <a-light id="topLight" type="point" intensity="5" position="150 600 -500"></a-light>
+<!--         <a-light id="topLight" type="point" intensity="5" position="150 600 -500"></a-light> -->
          <a-light id="bottomLight" type="point" intensity="5" position="150 600 -400"></a-light>
 
-         <a-light id="outsideLight" type="point" intensity="10" position="170 1000 -900"></a-light> -->
+<!--          <a-light id="outsideLight" type="point" intensity="10" position="170 1000 -900"></a-light> -->
 <!--          <a-entity light="type: ambient; intensity: 1"></a-entity>         -->
       </a-nft>
 
