--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         document.getElementById("model").setAttribute('animation-mixer','timeScale: 1.0;');
       }
 
-      var debuggedComponentId = "bottomLight"
+      var debuggedComponentId = "outsideLight"
       
       function onXSliderChange(value){
         console.log("x slider value: "+value)
@@ -176,7 +176,7 @@
 <!--         <a-light id="topLight" type="point" intensity="5" position="150 600 -500"></a-light> -->
          <a-light id="bottomLight" type="point" intensity="20" position="150 600 -50"></a-light>
 
-<!--          <a-light id="outsideLight" type="point" intensity="10" position="170 1000 -900"></a-light> -->
+         <a-light id="outsideLight" type="point" intensity="10" position="170 1000 -900"></a-light>
 <!--          <a-entity light="type: ambient; intensity: 1"></a-entity>         -->
       </a-nft>
 
