--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         document.getElementById("model").setAttribute('animation-mixer','timeScale: 1.0;');
       }
 
-      var debuggedComponentId = "outsideLight"
+      var debuggedComponentId = "model"
       
       function onXSliderChange(value){
         console.log("x slider value: "+value)
@@ -167,7 +167,7 @@
           scale="800 800 800"
           position="200 550 -500"
           rotation="180 90 -90"
-          animation-mixer="loop: once; timeScale: 0"
+          animation-mixer="loop: repeat; timeScale: 0"
           id="model"
           model
         >
